--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "eslint": "8.22.0",
     "axios": "^1.1.3",
     "react-redux": "^8.0.4",
-    "@reduxjs/toolkit": "^1.8.6"
+    "@reduxjs/toolkit": "^1.8.6",
+    "react-router-dom": "^6.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
