--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "5.0.1",
     "react-star-ratings": "^2.3.0",
     "react-stars-rating": "^0.0.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-hook-form": "^7.38.0"
   },
   "scripts": {
     "start": "react-scripts start",
